--- a/src/dropdown/dropdown.css
+++ b/src/dropdown/dropdown.css
@@ -99,3 +99,16 @@
     background-color: #e4edf2;
     color: #2079a6;
 }
+
+.dp-dropdown:hover > .wrap {
+    border-color: #636365;
+}
+
+.dp-dropdown.open > .wrap {
+    position: relative;
+    background-color: #fafafa;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.24), 0 0 8px 0 rgba(0, 0, 0, 0.12);
+    border-bottom: solid 1px rgba(0, 0, 0, 0.12);
+}
