--- a/src/datepicker/datepicker.css
+++ b/src/datepicker/datepicker.css
@@ -2,10 +2,26 @@ body{
     direction: rtl;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+  height: 6px;
+}
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: white;
+}
+::-webkit-scrollbar-thumb{
+  border-radius: 10px;
+  background: #c1c1c1;
+}
+
 .datepicker-ui{
     position: absolute;
-    top: 20px;
-    left: 25%;
+    left: 0;
+    right: 0;
+    top: 25px;
+    margin-left: auto;
+    margin-right: auto;
     min-height: 237px;
     background-color: #ffffff;
     box-shadow: 0 0 11px 0 rgba(0, 0, 0, 0.19), 0 0 6px 0 rgba(0, 0, 0, 0.26);
